test/testdata/functions/builtin/exit_non_number_error.lox
exit("1"); // error: expected exit argument to be a 'number', got 'string'
